[package]
name = "rs3list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-types = "0.49.0"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
tokio = { version = "1.21.1", features = ["full"] }
clap = {version="4.0.18",features=["derive"]}